[add] #3 - VM 프로비저닝 관련 열거형 추가